<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".LoginActivity">
<androidx.appcompat.widget.AppCompatImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:padding="10dp"
    android:id="@+id/back"
    android:src="@drawable/ic_baseline_arrow_back_ios_24"
    app:tint="@color/black" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/face"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/holo_blue_dark"
        android:background="@drawable/facebook_corner_button"/>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_red_dark"
        android:background="@drawable/google_corner_button"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@android:color/darker_gray"
        android:textSize="15dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailText"
            android:text="almiladurukavak@gmail.com"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true"
       >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordText"
            android:text="123456"
             android:inputType="textPassword"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/email_signin_button"
        android:text="@string/email_sign"
        android:id="@+id/emailSignIn"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"/>

</androidx.appcompat.widget.LinearLayoutCompat>