<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".HomeSelectActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
             android:id="@+id/userName"
            android:layout_marginLeft="4dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginRight="4dp"
            android:textColor="@color/black"
            android:text="@string/welcome"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:id="@+id/urban_hero_lin"
            android:paddingBottom="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/ic_baseline_remove_red_eye_24"
                android:text="@string/urban_hero"
                android:layout_gravity="center"
                android:textColor="@color/purple"
                android:drawableTint="@color/purple"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/notify_car_owner"
                android:layout_gravity="center"
                android:textColor="@android:color/darker_gray"
                android:gravity="center"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:id="@+id/edit_car_info_lin"
            android:paddingBottom="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/ic_baseline_fast_forward_24"
                android:text="@string/edit_car_details"
                android:layout_gravity="center"
                android:textColor="@color/purple"
                android:drawableTint="@color/purple"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/enter_car_info"
                android:layout_gravity="center"
                android:textColor="@android:color/darker_gray"
                android:gravity="center"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:text="logout"/>
</androidx.appcompat.widget.LinearLayoutCompat>