<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ReportDetailsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/takedPhoto"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"

        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:id="@+id/progress"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/takePhoto"
        android:text="@string/take_photo"
        android:layout_margin="20dp"
        android:background="@drawable/login_corner_button"
        android:src="@drawable/ic_baseline_delete_24"
        android:padding="15dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="15dp"
        android:gravity="center_horizontal"
        android:id="@+id/addressText"/>



   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="10dp"
       android:orientation="horizontal">
       <androidx.appcompat.widget.AppCompatTextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:id="@+id/dateText"
           android:textColor="?attr/colorPrimary"
           android:layout_gravity="center_horizontal"/>
       <androidx.appcompat.widget.AppCompatTextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:id="@+id/carPlateText"
           android:textAlignment="textEnd"
           android:textColor="@color/black"
           android:layout_gravity="center_horizontal"
           tools:ignore="RtlCompat" />

   </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_alert"
        android:layout_gravity="center_horizontal"/>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginTop="20dp"
        android:id="@+id/confirmBttn"
        android:background="@drawable/signup_corner_button"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteButton"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_delete_24"
        android:padding="15dp"/>


</androidx.appcompat.widget.LinearLayoutCompat>